Thu May 23 17:28:35 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.[ch] : applied patch from Morus Walter
	  adding xsltSaveResultToString()
	* doc/APIfiles.html doc/APIfunctions.html doc/libxslt-api.xml
	  doc/libxslt-decl.txt doc/libxslt-refs.xml: this increased the
	  API with the new function.

Wed May 22 11:50:36 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/function.c: applied a patch from Richard Jinks
	  to avoid a crash in element-available()

Tue May 21 19:38:20 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in: applied patch from Geert Kloosterman to
	  not miss gif and .png files in the RPM  documentation

Tue May 21 08:43:11 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/libexslt.4: Applied patch for the EXSLT man page
	  from Charles Bozeman

Sat May 18 10:01:38 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/libexslt.4 libxslt/libxslt.4 libxslt/keys.c 
	  libxslt/xsltconfig.h.in: applied a man page patch from 
	  Christian Cornelssen and fixed a couple of issues he raised.

Thu May 16 19:38:24 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: moved the extension dump out of the loop

Thu May 16 19:31:35 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.[ch]  xsltproc/xsltproc.c win32/libxslt.def.src:
	  Applied Mark Vakoc patch to show registered extensions in xsltproc
	* doc/*: rebuilt the API, docs and website
	* python/libxsltclass.txt: this added an entry point

Wed May 15 00:20:10 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libxslt/xslt.c: xsl:include crash fix
	* libxslt/imports.c: xsl:include crash fix
	* libxslt/imports.h: xsl:include crash fix	

Wed May  9 01:39:14 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libexslt/exslt.h: fixed a typo _cplusplus -> __cplusplus

Thu May  2 11:08:22 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c libxslt/xsltutils.c doc/xsltproc.xml: