@@ -12,6 +12,12 @@
       <arg name='doc' type='xmlDocPtr' info='a parsed XML document'/>
       <arg name='params' type='pythonObject' info='the parameters dictionnary'/>
     </function>
+    <function name='xsltRegisterErrorHandler' file='python'>
+      <info>Register a Python written function to for error reporting. The function is called back as f(ctx, error).</info>
+      <return type='int' info="1 in case of success, 0 or -1 in case of error"/>
+      <arg name='f' type='pythonObject' info='the python function'/>
+      <arg name='ctx' type='pythonObject' info='a context for the callback'/>
+    </function>
     <function name='xsltRegisterExtModuleFunction' file='python'>
       <info>Register a Python written function to the XSLT engine</info>
       <return type='int' info="0 in case of success, -1 in case of error"/>
